@@ -157,12 +157,12 @@ public class PrincipalBasedAccessControlManagerTest extends AbstractPrincipalBas
 
     @Test(expected = AccessControlException.class)
     public void testGetEffectivePoliciesEmptyPrincipalName() throws Exception {
-        acMgr.getEffectivePolicies(ImmutableSet.of(validPrincipal, new PrincipalImpl("")));
+        acMgr.getEffectivePolicies(Set.of(validPrincipal, new PrincipalImpl("")));
     }
 
     @Test
     public void testGetEffectivePoliciesNothingSet() throws Exception {
-        AccessControlPolicy[] effective = acMgr.getEffectivePolicies(ImmutableSet.of(validPrincipal));
+        AccessControlPolicy[] effective = acMgr.getEffectivePolicies(Set.of(validPrincipal));
         assertEffectivePolicies(effective, 1, -1, true);
     }
 
@@ -173,12 +173,12 @@ public class PrincipalBasedAccessControlManagerTest extends AbstractPrincipalBas
         acMgr.setPolicy(policy.getPath(), policy);
 
         // transient changes => no effective policy
-        AccessControlPolicy[] effective = acMgr.getEffectivePolicies(ImmutableSet.of(validPrincipal));
+        AccessControlPolicy[] effective = acMgr.getEffectivePolicies(Set.of(validPrincipal));
         assertEffectivePolicies(effective, 1, -1, true);
 
         // after commit => effective policy present
         root.commit();
-        effective = acMgr.getEffectivePolicies(ImmutableSet.of(validPrincipal));
+        effective = acMgr.getEffectivePolicies(Set.of(validPrincipal));
         assertEffectivePolicies(effective, 2, 1, true);
     }
 
@@ -187,7 +187,7 @@ public class PrincipalBasedAccessControlManagerTest extends AbstractPrincipalBas
         JackrabbitAccessControlPolicy emptyPolicy = acMgr.getApplicablePolicies(validPrincipal)[0];
         acMgr.setPolicy(emptyPolicy.getPath(), emptyPolicy);
         root.commit();
-        AccessControlPolicy[] effective = acMgr.getEffectivePolicies(ImmutableSet.of(validPrincipal));
+        AccessControlPolicy[] effective = acMgr.getEffectivePolicies(Set.of(validPrincipal));
         assertEffectivePolicies(effective, 1, -1, true);
     }
 
@@ -201,7 +201,7 @@ public class PrincipalBasedAccessControlManagerTest extends AbstractPrincipalBas
         getUserManager(latestRoot).getAuthorizable(validPrincipal).remove();
         latestRoot.commit();
         try {
-            assertEffectivePolicies(acMgr.getEffectivePolicies(ImmutableSet.of(validPrincipal)), 1, -1, true);
+            assertEffectivePolicies(acMgr.getEffectivePolicies(Set.of(validPrincipal)), 1, -1, true);
         } finally {
             root.refresh();
             getUserManager(root).createSystemUser(id, INTERMEDIATE_PATH);
@@ -218,7 +218,7 @@ public class PrincipalBasedAccessControlManagerTest extends AbstractPrincipalBas
         setupPrincipalBasedAccessControl(validPrincipal, testJcrPath, JCR_READ);
         root.commit();
 
-        Set<Principal> mixedPrincipalSet = ImmutableSet.of(validPrincipal, getTestUser().getPrincipal());
+        Set<Principal> mixedPrincipalSet = Set.of(validPrincipal, getTestUser().getPrincipal());
         assertEquals(0, acMgr.getEffectivePolicies(mixedPrincipalSet).length);
     }
 
@@ -231,7 +231,7 @@ public class PrincipalBasedAccessControlManagerTest extends AbstractPrincipalBas
         latestRoot.getTree(getNamePathMapper().getOakPath(validPrincipal.getPath())).getChild(REP_PRINCIPAL_POLICY).remove();
         latestRoot.commit();
 
-        assertEffectivePolicies(acMgr.getEffectivePolicies(ImmutableSet.of(validPrincipal)), 1, -1, true);
+        assertEffectivePolicies(acMgr.getEffectivePolicies(Set.of(validPrincipal)), 1, -1, true);
     }
 
     @Test(expected = AccessControlException.class)
@@ -245,7 +245,7 @@ public class PrincipalBasedAccessControlManagerTest extends AbstractPrincipalBas
         setupPrincipalBasedAccessControl(validPrincipal, testContentJcrPath, REP_WRITE);
         root.commit();
 
-        ImmutablePrincipalPolicy effective = (ImmutablePrincipalPolicy) acMgr.getEffectivePolicies(ImmutableSet.of(validPrincipal))[0];
+        ImmutablePrincipalPolicy effective = (ImmutablePrincipalPolicy) acMgr.getEffectivePolicies(Set.of(validPrincipal))[0];
         acMgr.setPolicy(effective.getPath(), effective);
     }
 
@@ -343,7 +343,7 @@ public class PrincipalBasedAccessControlManagerTest extends AbstractPrincipalBas
         setupPrincipalBasedAccessControl(validPrincipal, testContentJcrPath, REP_WRITE);
         root.commit();
 
-        ImmutablePrincipalPolicy effective = (ImmutablePrincipalPolicy) acMgr.getEffectivePolicies(ImmutableSet.of(validPrincipal))[0];
+        ImmutablePrincipalPolicy effective = (ImmutablePrincipalPolicy) acMgr.getEffectivePolicies(Set.of(validPrincipal))[0];
         acMgr.removePolicy(effective.getPath(), effective);
     }
 
@@ -493,12 +493,12 @@ public class PrincipalBasedAccessControlManagerTest extends AbstractPrincipalBas
         root.commit();
 
         // priv is only granted where both models are granting.
-        assertFalse(acMgr.hasPrivileges(testContentJcrPath, ImmutableSet.of(validPrincipal), privilegesFromNames(JCR_NODE_TYPE_MANAGEMENT)));
-        assertTrue(acMgr.hasPrivileges(testJcrPath, ImmutableSet.of(validPrincipal), privilegesFromNames(JCR_NODE_TYPE_MANAGEMENT)));
+        assertFalse(acMgr.hasPrivileges(testContentJcrPath, Set.of(validPrincipal), privilegesFromNames(JCR_NODE_TYPE_MANAGEMENT)));
+        assertTrue(acMgr.hasPrivileges(testJcrPath, Set.of(validPrincipal), privilegesFromNames(JCR_NODE_TYPE_MANAGEMENT)));
 
         // set of principals not supported by principalbased-authorization => only default impl takes effect.
-        assertFalse(acMgr.hasPrivileges(testContentJcrPath, ImmutableSet.of(validPrincipal, EveryonePrincipal.getInstance()), privilegesFromNames(JCR_NODE_TYPE_MANAGEMENT)));
-        assertTrue(acMgr.hasPrivileges(testJcrPath, ImmutableSet.of(validPrincipal, EveryonePrincipal.getInstance()), privilegesFromNames(JCR_NODE_TYPE_MANAGEMENT)));
+        assertFalse(acMgr.hasPrivileges(testContentJcrPath, Set.of(validPrincipal, EveryonePrincipal.getInstance()), privilegesFromNames(JCR_NODE_TYPE_MANAGEMENT)));
+        assertTrue(acMgr.hasPrivileges(testJcrPath, Set.of(validPrincipal, EveryonePrincipal.getInstance()), privilegesFromNames(JCR_NODE_TYPE_MANAGEMENT)));
     }
 
     @Test
@@ -511,12 +511,12 @@ public class PrincipalBasedAccessControlManagerTest extends AbstractPrincipalBas
         root.commit();
 
         // only subset is is granted
-        assertPrivileges(acMgr.getPrivileges(testContentJcrPath, ImmutableSet.of(validPrincipal)), JCR_REMOVE_NODE);
-        assertPrivileges(acMgr.getPrivileges(testJcrPath, ImmutableSet.of(validPrincipal)), JCR_REMOVE_NODE);
+        assertPrivileges(acMgr.getPrivileges(testContentJcrPath, Set.of(validPrincipal)), JCR_REMOVE_NODE);
+        assertPrivileges(acMgr.getPrivileges(testJcrPath, Set.of(validPrincipal)), JCR_REMOVE_NODE);
 
         // set of principals not supported by principalbased-authorization => only default impl takes effect.
-        assertPrivileges(acMgr.getPrivileges(testContentJcrPath, ImmutableSet.of(validPrincipal, EveryonePrincipal.getInstance())), JCR_READ, JCR_REMOVE_NODE);
-        assertPrivileges(acMgr.getPrivileges(testJcrPath, ImmutableSet.of(validPrincipal, EveryonePrincipal.getInstance())), JCR_READ, JCR_REMOVE_NODE);
+        assertPrivileges(acMgr.getPrivileges(testContentJcrPath, Set.of(validPrincipal, EveryonePrincipal.getInstance())), JCR_READ, JCR_REMOVE_NODE);
+        assertPrivileges(acMgr.getPrivileges(testJcrPath, Set.of(validPrincipal, EveryonePrincipal.getInstance())), JCR_READ, JCR_REMOVE_NODE);
     }
 
     private void assertPrivileges(@NotNull Privilege[] privs, @NotNull String... expectedOakPrivNames) throws Exception {
