@@ -28,6 +28,7 @@ import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
+import java.util.TreeSet;
 import java.util.function.Predicate;
 import javax.jcr.AccessDeniedException;
 import javax.jcr.RepositoryException;
@@ -41,10 +42,8 @@ import javax.jcr.security.AccessControlPolicyIterator;
 import javax.jcr.security.Privilege;
 
 import org.apache.jackrabbit.guava.common.base.Strings;
-import org.apache.jackrabbit.guava.common.collect.ImmutableSet;
 import org.apache.jackrabbit.guava.common.collect.Iterables;
 import org.apache.jackrabbit.guava.common.collect.Lists;
-import org.apache.jackrabbit.guava.common.collect.Sets;
 import org.apache.jackrabbit.JcrConstants;
 import org.apache.jackrabbit.api.security.JackrabbitAccessControlList;
 import org.apache.jackrabbit.api.security.JackrabbitAccessControlPolicy;
@@ -135,7 +134,7 @@ public class AccessControlManagerImpl extends AbstractAccessControlManager imple
         if (policy != null) {
             policies.add(policy);
         }
-        if (readPaths.contains(oakPath)) {
+        if (Objects.nonNull(oakPath) && readPaths.contains(oakPath)) {
             policies.add(ReadPolicy.INSTANCE);
         }
         return policies.toArray(new AccessControlPolicy[0]);
@@ -247,7 +246,7 @@ public class AccessControlManagerImpl extends AbstractAccessControlManager imple
                 // remove rep:nodePath restriction before removing the entry from
                 // the node-based policy (see above for adding entries without
                 // this special restriction).
-                Set<Restriction> rstr = Sets.newHashSet(ace.getRestrictions());
+                Set<Restriction> rstr = new HashSet<>(ace.getRestrictions());
                 rstr.removeIf(r -> REP_NODE_PATH.equals(r.getDefinition().getName()));
                 acl.removeAccessControlEntry(new Entry(ace.getPrincipal(), ace.getPrivilegeBits(), ace.isAllow(), rstr, getNamePathMapper()));
                 setNodeBasedAcl(path, tree, acl);
@@ -597,9 +596,9 @@ public class AccessControlManagerImpl extends AbstractAccessControlManager imple
     private Set<AccessControlPolicy> internalGetEffectivePolicies(@NotNull Set<Principal> principals, Collection<String> oakPaths) throws RepositoryException {
         Root r = getLatestRoot();
         Result aceResult = searchAces(principals, r);
-        Set<AccessControlPolicy> effective = Sets.newTreeSet(new PolicyComparator());
+        Set<AccessControlPolicy> effective = new TreeSet<>(new PolicyComparator());
 
-        Set<String> processed = Sets.newHashSet();
+        Set<String> processed = new HashSet<>();
         for (ResultRow row : aceResult.getRows()) {
             Tree aceTree = row.getTree(null);
             String acePath = aceTree.getPath();
@@ -668,7 +667,7 @@ public class AccessControlManagerImpl extends AbstractAccessControlManager imple
                 return false;
             }
 
-            if (PermissionUtil.isAdminOrSystem(ImmutableSet.of(p), configParams)) {
+            if (PermissionUtil.isAdminOrSystem(Set.of(p), configParams)) {
                 log.warn("Attempt to create an ACE for an administrative principal which always has full access: {}", getPath());
                 switch (importBehavior) {
                     case ImportBehavior.IGNORE:
