@@ -28,13 +28,12 @@ import java.text.MessageFormat;
 import java.util.Properties;
 import java.util.Set;
 
-import org.apache.jackrabbit.guava.common.collect.ImmutableSet;
-import org.apache.jackrabbit.guava.common.collect.Sets;
 import org.apache.jackrabbit.guava.common.io.Files;
 import org.apache.felix.inventory.Format;
 import org.apache.jackrabbit.oak.api.CommitFailedException;
 import org.apache.jackrabbit.oak.api.Type;
 import org.apache.jackrabbit.oak.commons.PathUtils;
+import org.apache.jackrabbit.oak.commons.collections.CollectionUtils;
 import org.apache.jackrabbit.oak.commons.junit.LogCustomizer;
 import org.apache.jackrabbit.oak.plugins.index.AsyncIndexUpdate;
 import org.apache.jackrabbit.oak.plugins.index.IndexConstants;
@@ -69,7 +68,6 @@ import org.junit.Test;
 import org.junit.rules.TemporaryFolder;
 import org.slf4j.event.Level;
 
-import static org.apache.jackrabbit.guava.common.collect.ImmutableSet.of;
 import static java.util.Arrays.asList;
 import static org.apache.jackrabbit.JcrConstants.NT_BASE;
 import static org.apache.jackrabbit.oak.InitialContentHelper.INITIAL_CONTENT;
@@ -82,7 +80,12 @@ import static org.apache.jackrabbit.oak.plugins.index.IndexUtils.createIndexDefi
 import static org.apache.jackrabbit.oak.plugins.index.importer.AsyncIndexerLock.NOOP_LOCK;
 import static org.apache.jackrabbit.oak.plugins.index.importer.IndexDefinitionUpdater.INDEX_DEFINITIONS_JSON;
 import static org.apache.jackrabbit.oak.plugins.memory.EmptyNodeState.EMPTY_NODE;
-import static org.junit.Assert.*;
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertTrue;
+import static org.junit.Assert.assertFalse;
+import static org.junit.Assert.assertNotNull;
+import static org.junit.Assert.assertNull;
+import static org.junit.Assert.fail;
 import static org.mockito.Mockito.mock;
 
 public class IndexImporterTest {
@@ -226,7 +229,7 @@ public class IndexImporterTest {
     public void importData_IncrementalUpdate() throws Exception{
         NodeBuilder builder = store.getRoot().builder();
         createIndexDefinition(builder.child(INDEX_DEFINITIONS_NAME),
-                "fooIndex", true, false, ImmutableSet.of("foo"), null)
+                "fooIndex", true, false, Set.of("foo"), null)
                 .setProperty(ASYNC_PROPERTY_NAME, "async");
         builder.child("a").setProperty("foo", "abc");
         builder.child("b").setProperty("foo", "abc");
@@ -245,7 +248,7 @@ public class IndexImporterTest {
 
         FilterImpl f = createFilter(store.getRoot(), NT_BASE);
         PropertyIndexLookup lookup = new PropertyIndexLookup(store.getRoot());
-        assertEquals(of("a", "b", "c", "d"), find(lookup, "foo", "abc", f));
+        assertEquals(Set.of("a", "b", "c", "d"), find(lookup, "foo", "abc", f));
 
         IndexImporterProvider importerProvider = new IndexImporterProvider() {
             @Override
@@ -280,7 +283,7 @@ public class IndexImporterTest {
 
         lookup = new PropertyIndexLookup(store.getRoot());
         //It would not pickup /e as thats not yet indexed as part of last checkpoint
-        assertEquals(of("a", "b", "c", "d"), find(lookup, "foo", "abc", f));
+        assertEquals(Set.of("a", "b", "c", "d"), find(lookup, "foo", "abc", f));
         assertNull(store.retrieve(checkpoint));
         assertNull(store.getRoot().getChildNode("oak:index").getChildNode("fooIndex").getProperty(IndexImporter.INDEX_IMPORT_STATE_KEY));
     }
@@ -347,7 +350,7 @@ public class IndexImporterTest {
 
         FilterImpl f = createFilter(store.getRoot(), NT_BASE);
         PropertyIndexLookup lookup = new PropertyIndexLookup(store.getRoot());
-        assertEquals(of("a", "c", "d"), find(lookup, "foo", "abc", f));
+        assertEquals(Set.of("a", "c", "d"), find(lookup, "foo", "abc", f));
 
         NodeState idx = store.getRoot().getChildNode("oak:index").getChildNode("fooIndex");
         assertEquals(2, idx.getLong("reindexCount"));
@@ -357,7 +360,7 @@ public class IndexImporterTest {
     public void importData_DisabledIndexes() throws Exception{
         NodeBuilder builder = store.getRoot().builder();
         NodeBuilder idxa = createIndexDefinition(builder.child(INDEX_DEFINITIONS_NAME),
-                "fooIndex", true, false, ImmutableSet.of("foo"), null);
+                "fooIndex", true, false, Set.of("foo"), null);
         idxa.setProperty(ASYNC_PROPERTY_NAME, "async");
         idxa.setProperty(IndexConstants.SUPERSEDED_INDEX_PATHS, asList("/oak:index/barIndex"), Type.STRINGS);
 
@@ -372,7 +375,7 @@ public class IndexImporterTest {
         builder = store.getRoot().builder();
 
         createIndexDefinition(builder.child(INDEX_DEFINITIONS_NAME),
-                "barIndex", true, false, ImmutableSet.of("foo"), null);
+                "barIndex", true, false, Set.of("foo"), null);
 
         builder.child("c").setProperty("foo", "abc");
         builder.child("d").setProperty("foo", "abc");
@@ -405,7 +408,7 @@ public class IndexImporterTest {
         // Add index definition
         NodeBuilder builder = root.builder();
         NodeBuilder index = createIndexDefinition(builder.child(INDEX_DEFINITIONS_NAME), "fooIndex",
-                true, false, ImmutableSet.of("foo"), null);
+                true, false, Set.of("foo"), null);
         builder.child("a").setProperty("foo", "abc");
         NodeState after = builder.getNodeState();
         EditorHook hook = new EditorHook(
@@ -439,7 +442,7 @@ public class IndexImporterTest {
     public void laneUnlockedInCaseOfFailure() throws Exception{
         NodeBuilder builder = store.getRoot().builder();
         createIndexDefinition(builder.child(INDEX_DEFINITIONS_NAME),
-                "fooIndex", true, false, ImmutableSet.of("foo"), null)
+                "fooIndex", true, false, Set.of("foo"), null)
                 .setProperty(ASYNC_PROPERTY_NAME, "async");
         builder.child("a").setProperty("foo", "abc");
         builder.child("b").setProperty("foo", "abc");
@@ -522,7 +525,7 @@ public class IndexImporterTest {
 
     private static Set<String> find(PropertyIndexLookup lookup, String name,
                                     String value, Filter filter) {
-        return Sets.newHashSet(lookup.query(filter, name, value == null ? null
+        return CollectionUtils.toSet(lookup.query(filter, name, value == null ? null
                 : PropertyValues.newString(value)));
     }
 
@@ -561,7 +564,7 @@ public class IndexImporterTest {
     private String importDataIncrementalUpdateBeforeSetupMethod() throws IOException, CommitFailedException {
         NodeBuilder builder = store.getRoot().builder();
         createIndexDefinition(builder.child(INDEX_DEFINITIONS_NAME),
-                "fooIndex", true, false, ImmutableSet.of("foo"), null)
+                "fooIndex", true, false, Set.of("foo"), null)
                 .setProperty(ASYNC_PROPERTY_NAME, "async");
         builder.child("a").setProperty("foo", "abc");
         builder.child("b").setProperty("foo", "abc");
@@ -579,7 +582,7 @@ public class IndexImporterTest {
 
         FilterImpl f = createFilter(store.getRoot(), NT_BASE);
         PropertyIndexLookup lookup = new PropertyIndexLookup(store.getRoot());
-        assertEquals(of("a", "b", "c", "d"), find(lookup, "foo", "abc", f));
+        assertEquals(Set.of("a", "b", "c", "d"), find(lookup, "foo", "abc", f));
 
         builder = store.getRoot().builder();
         builder.child("e").setProperty("foo", "abc");
@@ -626,11 +629,11 @@ public class IndexImporterTest {
             assertEquals("async", idx.getString("async"));
             FilterImpl f = createFilter(store.getRoot(), NT_BASE);
             PropertyIndexLookup lookup = new PropertyIndexLookup(store.getRoot());
-            assertEquals(of("a", "b", "c", "d"), find(lookup, "foo", "abc", f));
+            assertEquals(Set.of("a", "b", "c", "d"), find(lookup, "foo", "abc", f));
 
             lookup = new PropertyIndexLookup(store.getRoot());
             //It would not pickup /e as thats not yet indexed as part of last checkpoint
-            assertEquals(of("a", "b", "c", "d"), find(lookup, "foo", "abc", f));
+            assertEquals(Set.of("a", "b", "c", "d"), find(lookup, "foo", "abc", f));
             // checkpoint is not released because of failure
             assertNotNull(store.retrieve(checkpoint));
             // As failure is on switchlanes no update happened i.e. no state change got committed
@@ -674,11 +677,11 @@ public class IndexImporterTest {
             assertEquals("async", idx.getString("async"));
             FilterImpl f = createFilter(store.getRoot(), NT_BASE);
             PropertyIndexLookup lookup = new PropertyIndexLookup(store.getRoot());
-            assertEquals(of("a", "b", "c", "d"), find(lookup, "foo", "abc", f));
+            assertEquals(Set.of("a", "b", "c", "d"), find(lookup, "foo", "abc", f));
 
             lookup = new PropertyIndexLookup(store.getRoot());
             //It would not pickup /e as thats not yet indexed as part of last checkpoint
-            assertEquals(of("a", "b", "c", "d"), find(lookup, "foo", "abc", f));
+            assertEquals(Set.of("a", "b", "c", "d"), find(lookup, "foo", "abc", f));
             assertNotNull(store.retrieve(checkpoint));
             assertEquals("State matching failed",
                     IndexImporter.IndexImportState.SWITCH_LANE.toString(),
@@ -701,7 +704,7 @@ public class IndexImporterTest {
             FilterImpl f = createFilter(store.getRoot(), NT_BASE);
             PropertyIndexLookup lookup = new PropertyIndexLookup(store.getRoot());
             //It would not pickup /e as thats not yet indexed as part of last checkpoint
-            assertEquals(of("a", "b", "c", "d"), find(lookup, "foo", "abc", f));
+            assertEquals(Set.of("a", "b", "c", "d"), find(lookup, "foo", "abc", f));
             assertNull(store.retrieve(checkpoint));
             assertEquals("State matching failed",
                     null,
