@@ -18,11 +18,11 @@ package org.apache.jackrabbit.oak.security.authorization.composite;
 
 import java.util.Set;
 import org.apache.jackrabbit.guava.common.collect.ImmutableSet;
-import org.apache.jackrabbit.guava.common.collect.Sets;
 import org.apache.jackrabbit.oak.api.PropertyState;
 import org.apache.jackrabbit.oak.api.Root;
 import org.apache.jackrabbit.oak.api.Tree;
 import org.apache.jackrabbit.oak.commons.PathUtils;
+import org.apache.jackrabbit.oak.commons.collections.CollectionUtils;
 import org.apache.jackrabbit.oak.plugins.tree.TreeLocation;
 import org.apache.jackrabbit.oak.spi.security.authorization.permission.Permissions;
 import org.apache.jackrabbit.oak.spi.security.authorization.permission.RepositoryPermission;
@@ -33,6 +33,7 @@ import org.apache.jackrabbit.oak.spi.state.NodeState;
 import org.apache.jackrabbit.util.Text;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
+
 
 /**
  * Test implementation of the {@code AggregatedPermissionProvider} with following
@@ -58,8 +59,8 @@ import org.jetbrains.annotations.Nullable;
  */
 class LimitedScopeProvider extends AbstractAggrProvider implements PrivilegeConstants {
 
-    private static final Set<String> GRANTED_PRIVS = ImmutableSet.of(JCR_REMOVE_CHILD_NODES, JCR_REMOVE_NODE, REP_ALTER_PROPERTIES, REP_REMOVE_PROPERTIES);
-    private static final Set<String> DENIED_PRIVS = ImmutableSet.of(JCR_ADD_CHILD_NODES, REP_ADD_PROPERTIES);
+    private static final Set<String> GRANTED_PRIVS = Set.of(JCR_REMOVE_CHILD_NODES, JCR_REMOVE_NODE, REP_ALTER_PROPERTIES, REP_REMOVE_PROPERTIES);
+    private static final Set<String> DENIED_PRIVS = Set.of(JCR_ADD_CHILD_NODES, REP_ADD_PROPERTIES);
 
     private static final long GRANTED_PERMS = Permissions.REMOVE_NODE | Permissions.REMOVE_PROPERTY | Permissions.MODIFY_PROPERTY;
     private static final long DENIED_PERMS = Permissions.ADD_NODE | Permissions.ADD_PROPERTY;
@@ -73,17 +74,17 @@ class LimitedScopeProvider extends AbstractAggrProvider implements PrivilegeCons
     @Override
     public Set<String> getPrivileges(@Nullable Tree tree) {
         if (tree == null) {
-            return ImmutableSet.of(JCR_NODE_TYPE_DEFINITION_MANAGEMENT);
+            return Set.of(JCR_NODE_TYPE_DEFINITION_MANAGEMENT);
         } else if (isSupported(tree)) {
-            return ImmutableSet.of(JCR_REMOVE_CHILD_NODES, JCR_REMOVE_NODE, REP_ALTER_PROPERTIES, REP_REMOVE_PROPERTIES);
+            return Set.of(JCR_REMOVE_CHILD_NODES, JCR_REMOVE_NODE, REP_ALTER_PROPERTIES, REP_REMOVE_PROPERTIES);
         } else {
-            return ImmutableSet.of();
+            return Set.of();
         }
     }
 
     @Override
     public boolean hasPrivileges(@Nullable Tree tree, @NotNull String... privilegeNames) {
-        Set<String> pSet = Sets.newHashSet(privilegeNames);
+        Set<String> pSet = CollectionUtils.toSet(privilegeNames);
         if (tree == null) {
             if (pSet.contains(JCR_NAMESPACE_MANAGEMENT)) {
                 return false;
