@@ -18,7 +18,9 @@ package org.apache.jackrabbit.oak.spi.security.principal;
 
 import java.security.Principal;
 import java.util.Enumeration;
+import java.util.HashSet;
 import java.util.Iterator;
+import java.util.LinkedHashSet;
 import java.util.Map;
 import java.util.Set;
 import java.util.function.Predicate;
@@ -28,7 +30,6 @@ import org.apache.jackrabbit.guava.common.collect.ImmutableSet;
 import org.apache.jackrabbit.guava.common.collect.Iterables;
 import org.apache.jackrabbit.guava.common.collect.Iterators;
 import org.apache.jackrabbit.guava.common.collect.Maps;
-import org.apache.jackrabbit.guava.common.collect.Sets;
 
 import org.apache.jackrabbit.api.security.principal.GroupPrincipal;
 import org.apache.jackrabbit.api.security.principal.ItemBasedPrincipal;
@@ -73,7 +74,7 @@ public final class TestPrincipalProvider implements PrincipalProvider {
     }
 
     public Iterable<Principal> all() {
-        Set<Principal> all = Sets.newLinkedHashSet(principals.values());
+        Set<Principal> all = new LinkedHashSet<>(principals.values());
         all.add(EveryonePrincipal.getInstance());
         return all;
     }
@@ -107,9 +108,9 @@ public final class TestPrincipalProvider implements PrincipalProvider {
         if (principals.equals(TestPrincipals.asMap())) {
             return TestPrincipals.membership(principal.getName());
         } else if (principals.values().contains(principal)) {
-            return ImmutableSet.of(EveryonePrincipal.getInstance());
+            return Set.of(EveryonePrincipal.getInstance());
         } else {
-            return ImmutableSet.of();
+            return Set.of();
         }
     }
 
@@ -120,13 +121,14 @@ public final class TestPrincipalProvider implements PrincipalProvider {
         if (pName != null) {
             Principal p = principals.get(pName);
             if (p != null) {
-                Set<Principal> s = Sets.newHashSet(p);
+                Set<Principal> s = new HashSet<>();
+                s.add(p);
                 s.addAll(getMembershipPrincipals(p));
                 return s;
             }
         }
 
-        return ImmutableSet.of();
+        return Set.of();
     }
 
     @NotNull
@@ -210,15 +212,15 @@ public final class TestPrincipalProvider implements PrincipalProvider {
 
         private static Set<Principal> membership(@NotNull String name) {
             if ("a".equals(name)) {
-                return ImmutableSet.of(EveryonePrincipal.getInstance(), gr2, gr3);
+                return Set.of(EveryonePrincipal.getInstance(), gr2, gr3);
             } else if ("ac".equals(name)) {
-                return ImmutableSet.of(EveryonePrincipal.getInstance(), gr3);
+                return Set.of(EveryonePrincipal.getInstance(), gr3);
             } else if (gr2.getName().equals(name)) {
-                return ImmutableSet.of(EveryonePrincipal.getInstance(), gr3);
+                return Set.of(EveryonePrincipal.getInstance(), gr3);
             } else if (principals.containsKey(name)) {
-                return ImmutableSet.of(EveryonePrincipal.getInstance());
+                return Set.of(EveryonePrincipal.getInstance());
             } else {
-                return ImmutableSet.of();
+                return Set.of();
             }
         }
     }
